# computer-use-mcp

./: .dockerignore  .env.development  .env.example  .env.production  .env.staging  .gitignore  =0.8.1  BACKGROUND_RUNNER_ANALYSIS.md  BASIC_VS_LITE_COMPARISON.md  BLOATED_VERSION_ADVANTAGES.md  BUGS_FOUND.md  COMPARATIVE_ASSESSMENT.md  CONTRIBUTING.md  Dockerfile  EXECUTIVE_SUMMARY.md  FEATURES_REALITY_CHECK.md  FEATURE_COMPARISON.md  FINAL_100_PERCENT_PROOF.md  FINAL_STATUS.md  FINAL_TDD_RESULTS.md  GITHUB_FIXED.md  GITHUB_USERNAME_STATUS.md  INSTALL_PACKAGE.md  LICENSE  LITE_REDUCTION_SUMMARY.md  LITE_TEST_REPORT.md  MCP_STDERR_FIX.md  MCP_TEST_REPORT.md  MIGRATION_COMPLETE.md  Makefile  PACKAGING.md  README-LITE.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_GUIDE.md  REFACTORING_SUMMARY.md  STRATEGIC_DECISION.md  TDD_100_ACHIEVEMENT.md  THE_REAL_STORY.md  TRUE_100_PERCENT_ACHIEVED.md  (+67 more)
.github/workflows/: full-test-suite.yml  security-tests.yml
backup_20250804_085140/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COMPLETION_ROADMAP.md  Makefile  PROJECT_STATUS.md  README.md  migrate_test_mode.py  package.json  pyproject.toml  requirements.txt  setup.py  setup_xserver.sh  test_after_refactor.sh
backup_20250804_085140/.github/workflows/: ci.yml  publish.yml
backup_20250804_085140/examples/: docker_usage.py  safety_demo.py
backup_20250804_085140/src/computer_use_mcp/: claude_integration.py  computer_use_core.py  computer_use_core_di.py  computer_use_refactored.py  error_handler.py  factory_refactored.py  mcp_server.py  platform_utils.py  safety_checks.py  vcxsrv_detector.py  visual_analyzer.py  windows_server_detector.py
backup_20250804_085140/src/computer_use_mcp/abstractions/: __init__.py
backup_20250804_085140/src/computer_use_mcp/implementations/: __init__.py
backup_20250804_085140/src/computer_use_mcp/input/: windows.py
backup_20250804_085140/src/computer_use_mcp/screenshot/: __init__.py  base.py  server_core.py  windows.py  windows_rdp.py
backup_20250804_085140/tests/: comprehensive_test_results.json  conftest.py  conftest_platform_aware.py  test_computer_use_core.py  test_e2e_functionality.py  test_mcp_complete_structure.py  test_mcp_integration.py  test_mcp_protocol.py  test_platform_aware_helper.py  test_platform_detection.py  test_proper_example.py  test_pure_unit_example.py  test_refactored_example.py  test_safety_fixed.py  test_safety_security.py  test_safety_security_fixed.py  test_screenshot_system.py  test_screenshot_windows.py  test_stress_reliability.py  test_vcxsrv.py  test_visual.py  test_windows_server.py  test_xserver_integration.py  test_xserver_manager.py
backup_20250804_085140/tests/fixtures/: mock_data.py
docs/: API.md
examples/: advanced_automation.py  basic_usage.py  mcp_integration.py  using_paths.py
mcp-configs/: computer-use-package.json
src/: analyze_security_test_results.py  fix_conftest_imports.py
src/computer_use_mcp/: __init__.py  computer_use_core.py  constants.py  mcp_server.py  safety_checks.py  visual_analyzer.py  xserver_manager.py
src/computer_use_mcp/utils/: __init__.py  helpers.py
src/mcp/: __init__.py  async_support.py  caching.py  computer_use_core.py  computer_use_refactored.py  config.py  constants.py  enhanced_computer_use.py  error_handling.py  factory_refactored.py  lite_server.py  mcp_server.py  middleware.py  safety_checks.py  test_mocks.py  version.py  visual_mode.py  xserver_manager.py
src/mcp/abstractions/: __init__.py
src/mcp/core/: computer_use.py  constants.py  factory.py  paths.py  safety.py  safety_checks.py  test_mocks.py  version.py
src/mcp/implementations/: __init__.py  display_manager_impl.py  platform_info_impl.py
src/mcp/input/: __init__.py  windows.py  x11.py
src/mcp/screenshot/: __init__.py  base.py  vcxsrv.py  windows.py  x11.py
src/mcp/server/: mcp_server.py  mcp_server_refactored.py  protocol_handler.py  tool_manager.py
src/mcp/utils/: __init__.py  caching.py  common_error_handler.py  config.py  error_handler.py  error_handling.py  error_messages.py  helpers.py  response_builder.py  retry.py  safe_json_encoder.py  security_fixes.py  validation_handler.py  validators.py  xserver_manager.py
tests/: __init__.py  comprehensive_test_results.json  conftest.py  conftest_platform_aware.py  run_comprehensive_tests.py  test_computer_use_core.py  test_e2e.py  test_e2e_functionality.py  test_e2e_workflows.py  test_integration.py  test_integration_comprehensive.py  test_mcp_complete_structure.py  test_mcp_integration.py  test_mcp_protocol.py  test_package_tdd.py  test_platform_aware_helper.py  test_platform_detection.py  test_proper_example.py  test_pure_unit_example.py  test_refactored_example.py  test_safety.py  test_safety_fixed.py  test_safety_security.py  test_safety_security_fixed.py  test_screenshot_system.py  test_stress_reliability.py  test_vcxsrv.py  test_windows_input_tools.py  test_windows_server.py  test_xserver_integration.py  test_xserver_manager.py
tests/fixtures/: __init__.py  mock_data.py
